--- a/src/frontend/modules/projects/components/Details.scss
+++ b/src/frontend/modules/projects/components/Details.scss
@@ -10,7 +10,8 @@
     .titleSubJob {
         font-size: 12px;
         color: #3c308b;
-        padding: 2px 0 2px 0;
+        padding: 2px 0 4px 0;
+        border-bottom: 1px solid #3c308b;
 
         .menuNumber {
             background-color: #3c308b;
@@ -21,36 +22,8 @@
         }
     }
 
-    .plans {
+    .statistic {
         float: right;
-        background: #fff;
-        padding: 2px 0px;
-        margin-top: -2px;
-
-        .row {
-            background: #fff;
-            color: #fff;
-            font-size: 12px;
-            font-weight: bold;
-            text-transform: uppercase;
-            margin-right: 10px;
-            padding: 2px 15px;
-        }
-        .row:last-child {
-            margin-right: 0px;
-        }
-
-        .current {
-            background-color: #fff9dd;
-            color: #b9b184;
-        }
-
-        .plan {
-            background-color: #5bc0de;
-        }
-
-        .miss {
-            background-color: #d9534f;
-        }
+        margin-top: -4px;
     }
 }
