--- a/src/frontend/modules/projects/components/Header.scss
+++ b/src/frontend/modules/projects/components/Header.scss
@@ -8,27 +8,28 @@
     }
 
     .plans {
-        div {
-            margin-bottom: 5px;
-            line-height: 15px;
-            height: 15px;
+        margin-top: 20px;
+
+        .statusWraper {
+            text-align: right;
+            margin-top: 20px;
+
+            .status {
+                padding: 5px;
+                line-height: 1em;
+                width: 21px;
+                font-size: 11px;
+                display: inline-block;
+                background-color: green;
+                color: #fff;
+                font-weight: bold;
+                text-align: center;
+                border-radius: 10.5px;
+            }
         }
     }
 
     .area {
         margin-top: 12px;
-
-        .status {
-            padding: 5px;
-            line-height: 1em;
-            width: 21px;
-            font-size: 11px;
-            display: inline-block;
-            background-color: green;
-            color: #fff;
-            font-weight: bold;
-            text-align: center;
-            border-radius: 10.5px;
-        }
     }
 }
