--- a/src/frontend/modules/projects/components/ReinforcedConcreteWorks.scss
+++ b/src/frontend/modules/projects/components/ReinforcedConcreteWorks.scss
@@ -8,11 +8,17 @@
             tr {
 
                 td {
-                    padding: 5px 15px;
+                    text-align: center;
+                    padding: 2px 10px;
+                    border-color: white;
                 }
 
                 td.summ {
-                    background-color: #ab99f4;
+                    background-color: #f2f2f2;
+                }
+
+                td.rightAlign {
+                    text-align: right;
                 }
             }
         }
@@ -28,11 +34,11 @@
     }
 
     .empty {
-        background-color: #ececec;
+        background-color: #fff;
     }
 
     .active {
-        background-color: #cfc6f4;
+        background-color: #efedf9;
         cursor: pointer;
     }
 }
