--- a/src/frontend/common/components/LeftMenu.scss
+++ b/src/frontend/common/components/LeftMenu.scss
@@ -32,6 +32,20 @@ ul.navSidebar > li > a {
     padding-right: 20px;
     padding-left: 20px;
 }
+ul.navSidebar > li > a.expandedMenu {
+    cursor: pointer;
+}
+ul.navSidebar > li > a > span {
+    display: block;
+    float: left;
+    font-size: 12px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+ul.navSidebar > li > a:hover,
+ul.navSidebar > li > a:focus {
+    background-color: #b5d7f2;
+}
 ul.navSidebar > .active > a,
 ul.navSidebar > .active > a:hover,
 ul.navSidebar > .active > a:focus {
@@ -47,5 +61,8 @@ ul.navSidebar > .active > a:focus {
     padding-left: 32px;
 }
 .submenu .navSidebar.submenu > li > a {
-    padding-left: 42px;
+    padding-left: 52px;
+}
+ul.navSidebar.submenu {
+    margin-bottom: 0px;
 }
