--- a/src/frontend/modules/map/components/PlaceDetails.scss
+++ b/src/frontend/modules/map/components/PlaceDetails.scss
@@ -7,8 +7,32 @@
     background-color: #fff;
     box-shadow: 0px 0px 5px #000;
 
-    img {
+    .close {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        font-size: 22px;
+        background: #fff;
+        color: #000;
+        width: 1.5em;
+        padding: 3px;
+        line-height: 1em;
+        text-align: center;
+        border-radius: 5px;
+        opacity: 0.5;
+        cursor: pointer;
+    }
+
+    .close:hover {
+        opacity: 1;
+    }
+
+    .image {
         width: 100%;
+        height: 10vw;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
     }
 
     h1 {
