--- a/src/frontend/modules/map/components/PlaceDetails.scss
+++ b/src/frontend/modules/map/components/PlaceDetails.scss
@@ -41,6 +41,11 @@
         background: #3c308b;
         color: #fff;
         margin-top: 0px;
+
+        span {
+            color: #ffffff;
+            margin-left: 5px;
+        }
     }
 
     p {
