--- a/src/frontend/modules/map/components/Form.scss
+++ b/src/frontend/modules/map/components/Form.scss
@@ -34,6 +34,7 @@
         border-bottom: 1px solid #000;
         padding-bottom: 10px;
         padding-top: 10px;
+        margin-bottom: 0px;
     }
 
     .house > div {
