--- a/src/frontend/modules/map/components/Form.scss
+++ b/src/frontend/modules/map/components/Form.scss
@@ -7,12 +7,21 @@
     background-color: #fff;
     box-shadow: 0px 0px 5px #000;
 
+    .btn {
+        cursor: pointer;
+    }
+
     h1 {
         font-size: 18px;
         padding: 7px 15px;
         background: #3c308b;
         color: #fff;
         margin-top: 0px;
+
+        .btn {
+            cursor: pointer;
+            float: right;
+        }
     }
 
     .scrolWrapper {
