--- a/src/frontend/modules/map/components/PlaceDetails.scss
+++ b/src/frontend/modules/map/components/PlaceDetails.scss
@@ -28,6 +28,12 @@
         cursor: pointer;
     }
 
+    @media screen and (max-width: 767px) {
+        .close {
+            display: none;
+        }
+    }
+
     .close:hover {
         opacity: 1;
     }
