--- a/src/frontend/modules/map/components/Map.scss
+++ b/src/frontend/modules/map/components/Map.scss
@@ -6,6 +6,14 @@
     width: 100%;
     height: 100%;
 
+    @media (max-width: 991px) {
+        &.detail {
+            .containerElement {
+                height: calc(90vh - 51px);
+            }
+        }
+    }
+
     .containerElement {
         height: calc(100vh - 51px);
     }
