--- a/src/frontend/modules/map/components/PlaceDetails.scss
+++ b/src/frontend/modules/map/components/PlaceDetails.scss
@@ -28,8 +28,8 @@
         cursor: pointer;
     }
 
-    @media screen and (max-width: 767px) {
-        .close {
+    @media screen and (max-width: 991px) {
+        .close, .image, .btn {
             display: none;
         }
     }
