--- a/src/frontend/modules/map/components/Map.scss
+++ b/src/frontend/modules/map/components/Map.scss
@@ -14,6 +14,10 @@
         }
     }
 
+    .row {
+        cursor: pointer;
+    }
+
     .containerElement {
         height: calc(100vh - 51px);
     }
