--- a/src/frontend/modules/map/components/Form.scss
+++ b/src/frontend/modules/map/components/Form.scss
@@ -5,6 +5,12 @@
         cursor: pointer;
     }
 
+    .layer_btns {
+        button {
+            margin-right: 10px;
+        }
+    }
+
     h1 {
         font-size: 18px;
         padding: 7px 15px;
