--- a/src/frontend/modules/map/components/Map.scss
+++ b/src/frontend/modules/map/components/Map.scss
@@ -6,6 +6,39 @@
     width: 100%;
     height: 100%;
 
+    .img360 {
+        position: fixed;
+        left: 0px;
+        width: 100%;
+        top: 0px;
+        bottom: 0px;
+        background: #000;
+        z-index: 9999;
+
+        a {
+            position: absolute;
+            display: block;
+            left: 0px;
+            top: 0px;
+            padding: 10px;
+            font-weight: bold;
+            font-size: 16px;
+            background: #fff;
+            color: #000;
+            opacity: 0.6;
+        }
+
+        a:hover {
+            text-decoration: none;
+            opacity: 1;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
     @media (max-width: 991px) {
         &.detail {
             .containerElement {
