--- a/src/frontend/modules/status/components/StatusTable.scss
+++ b/src/frontend/modules/status/components/StatusTable.scss
@@ -106,6 +106,16 @@
 
                     .nameProj {
                         margin-bottom: 0px;
+                        padding-left: 18px;
+                    }
+
+                    .plus {
+                        float: left;
+                        margin-right: 3px;
+                        color: #949494;
+                        cursor: pointer;
+                        font-size: 12px;
+                        padding-top: 3px;
                     }
 
                     .addressProj {
