comments from Artem

--- a/src/frontend/modules/status/components/StatusTable.scss
+++ b/src/frontend/modules/status/components/StatusTable.scss
@@ -62,9 +62,10 @@
                     }
 
                     &.mainSteps {
-                        font-weight: 700;
+                        font-weight: 600;
                         font-style: normal;
                         color: #333333;
+                        font-size: 12px;
                     }
 
                     &.subSteps {
