--- a/src/frontend/modules/status/components/DataCell.scss
+++ b/src/frontend/modules/status/components/DataCell.scss
@@ -41,8 +41,10 @@
     cursor: pointer;
 }
 .modalContent {
+    overflow-y: auto;
     text-align: left;
     padding: 20px;
+    height: calc(100% - 50px);
 
     img {
         float: left;
