--- a/src/frontend/modules/status/components/DataCell.scss
+++ b/src/frontend/modules/status/components/DataCell.scss
@@ -15,6 +15,14 @@
     background-color: rgba(33, 33, 33, 0.85);
     z-index: 1000;
 }
+.docCounter {
+    position: absolute;
+    right: -8px;
+    top: -10px;
+    color: rgb(0, 0, 0);
+    font-size: 9px;
+    font-weight: bolder;
+}
 .modalDialog {
     position: fixed;
     top: 20%;
