--- a/src/frontend/common/components/Navigation.scss
+++ b/src/frontend/common/components/Navigation.scss
@@ -1,6 +1,15 @@
 .mobile {
-	.mobileMenu a {
-		color: #ffffff;
+	.mobileMenu {
+		a {
+			color: #ffffff;
+		}
+	}
+
+	.toggle {
+		display: block;
+		float: left;
+		margin-left: 20px;
+		margin-right: 10px;
 	}
 
 	.logo {
